--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,9 +7,13 @@
       body {
         font-family: Arial, sans-serif;
         background-color: #f2f2f2;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
       }
-      form {
-        max-width: 400px;
+      .calculator {
+        max-width: 600px;
         margin: 0 auto;
         padding: 20px;
         background-color: white;
@@ -29,7 +33,7 @@
         box-sizing: border-box;
       }
       button {
-        background-color: #4CAF50;
+        background-color: #3e57e6;
         color: white;
         padding: 10px;
         border: none;
@@ -39,7 +43,7 @@
         margin-top: 10px;
       }
       button:hover {
-        background-color: #3e8e41;
+        background-color: #3e57e6;
       }
       #output {
         margin-top: 20px;
@@ -51,30 +55,33 @@
     </style>
   </head>
   <body>
-    <form action="/" method="POST">
-        <div>
-            <label for="x">x:</label>
-            <input type="number" id="x" name="x">
-          </div>
-          <div>
-            <label for="y">y:</label>
-            <input type="number" id="y" name="y">
-          </div>
-          <div>
-            <label for="z">z:</label>
-            <input type="number" id="z" name="z">
-          </div>
-          <button id="calculate-button">Calculate</button>    
-    </form>
     
-    <div id="output">
-        <ul style="list-style:none; padding:0;">
-          <% for (var i = 0; i < input.length; i++) { %>
-            <li><%= input[i] %></li>
-          <% } %>
-        </ul>
-      </div>
-      
-      
+    <div class="calculator">
+        <h1>Question-4(Q1 as api)</h1>
+      <form action="/" method="POST">
+          <div>
+              <label for="x">x:</label>
+              <input type="number" id="x" name="x">
+            </div>
+            <div>
+              <label for="y">y:</label>
+              <input type="number" id="y" name="y">
+            </div>
+            <div>
+              <label for="z">z:</label>
+              <input type="number" id="z" name="z">
+            </div>
+            <button id="calculate-button">Calculate</button>    
+      </form>
+      <h4>Output:</h4>
+      <div id="output">
+        
+          <ul style="list-style:none; padding:0;">
+            <% for (var i = 0; i < input.length; i++) { %>
+              <li><%= input[i] %></li>
+            <% } %>
+          </ul>
+        </div>
+    </div>
   </body>
 </html>
