--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,7 @@
         box-sizing: border-box;
       }
       button {
-        background-color: #3e57e6;
+        background-color: #e3552d;
         color: white;
         padding: 10px;
         border: none;
@@ -43,7 +43,7 @@
         margin-top: 10px;
       }
       button:hover {
-        background-color: #3e57e6;
+        background-color: #e3552d;
       }
       #output {
         margin-top: 20px;
